--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,11 @@ button:focus-visible {
   flex-direction: column;
 }
 
+.product-details {
+  margin-top: 25px;
+  display: flex;
+}
+
 .title {
 
   margin-top: 20px;
